<?xml version="1.0"?>
<package>
  <name>rosplan_interface_behaviorengine</name>
  <version>0.1.0</version>
  <description>ROSPlan interface for the Behavior Engine</description>

  <maintainer email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</maintainer>
  <author email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rosplan_interface_behaviorengine</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>fawkes_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>fawkes_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>rosplan_planning_system</run_depend>

  <export>
  </export>
</package>
