<?xml version="1.0"?>
<package>
  <name>rosplan_interface_mapping</name>
  <version>0.0.0</version>
  <description>Interfaces ROSPlan with ros mapping, with tools for constructing waypoints.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>occupancy_grid_utils</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>occupancy_grid_utils</run_depend>
  
  <export></export>
</package>
